--- a/JSY Project/FSM_Svr/FSM_Svr.vcxproj
+++ b/JSY Project/FSM_Svr/FSM_Svr.vcxproj
@@ -161,6 +161,9 @@
     <ClCompile Include="FSM_Svr.cpp" />
     <ClCompile Include="FSM_User.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
