--- a/JSY Project/FSM_Svr/FSM_Svr.vcxproj
+++ b/JSY Project/FSM_Svr/FSM_Svr.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="FSM_PacketPool.h" />
     <ClInclude Include="FSM_Protocol.h" />
     <ClInclude Include="FSM_Sample.h" />
+    <ClInclude Include="FSM_Struct.h" />
     <ClInclude Include="FSM_Svr.h" />
     <ClInclude Include="FSM_User.h" />
   </ItemGroup>
